--- a/slides/document.tex
+++ b/slides/document.tex
@@ -1,9 +1,15 @@
 \documentclass{beamer}
 \usepackage{graphicx}
 
-\title{Your Presentation Title}
-\author{Your Name}
-\date{\today}
+\usetheme{Copenhagen}
+\usecolortheme{beaver}
+
+% hide navigation butons at bottom
+\setbeamertemplate{navigation symbols}{}
+
+\title{Übertragung von Signalen auf elektrischen Leitungen}
+\author{Sven Schmidt}
+
 
 \begin{document}
 
@@ -14,7 +20,7 @@
     \includegraphics[width=0.5\textwidth]{logo_fernuni_hagen.png}
     \vspace{0.5cm} % Adjust space between image and title as needed
 
-    {\LARGE \textbf{Übertragung von Signalen auf elektrischen Leitungen}}\\[0.5cm]
+    {\LARGE \textbf{\inserttitle}}\\[0.5cm]
 
     \textbf{Proseminar Mathematik in der Technik}\\
     \textbf{Modulnummer:} 61711\\
@@ -31,6 +37,38 @@
 
     {\large FernUniversität in Hagen}\\
     {\large Sommersemester 2025}
+\end{frame}
+
+
+\section{Herleitung der Telegraphenleitung}
+
+
+\begin{frame}{Modell des Zweidrahtleiters}
+
+Wir betrachten ausschließlich Paralleldrahtleiter.
+
+\begin{figure}[!htb]
+    \begin{center}
+        \includegraphics[width=0.75\textwidth]{../Ausarbeitung/images/Leiter.png}
+    \end{center}
+\end{figure}
+
+\end{frame}
+
+
+\begin{frame}{Leitungsbeläge}
+
+Ein Leitungsstück der Länge $s$:
+\begin{figure}[!htb]
+    \begin{center}
+        \includegraphics[width=0.5\textwidth]{graphics/Ersatzschaltbild4/document}
+    \end{center}
+\end{figure}
+
+
+
+
+
 \end{frame}
 
 
