--- a/slides/document.tex
+++ b/slides/document.tex
@@ -1,11 +1,26 @@
 \documentclass{beamer}
+%\documentclass[handout]{beamer}
 \usepackage{graphicx}
+\usepackage{tikz}
 
 \usetheme{Copenhagen}
 \usecolortheme{beaver}
 
+
+% for handouts, use with
+% \documentclass[handout]{beamer}
+%\usepackage{pgfpages}
+%\pgfpagesuselayout{4 on 1}[a4paper, border shrink=5mm]
+
+
 % hide navigation butons at bottom
 \setbeamertemplate{navigation symbols}{}
+
+%hide navigation at top
+\setbeamertemplate{adline}{}
+
+\setbeamercovered{transparent}
+
 
 \title{Übertragung von Signalen auf elektrischen Leitungen}
 \author{Sven Schmidt}
@@ -39,6 +54,9 @@
     {\large Sommersemester 2025}
 \end{frame}
 
+\begin{frame}{Inhalt}
+    \tableofcontents
+\end{frame}
 
 \section{Herleitung der Telegraphenleitung}
 
