--- a/graphics/AbschlussMitWellenWiderstand/document.tex
+++ b/graphics/AbschlussMitWellenWiderstand/document.tex
@@ -57,7 +57,7 @@
 \draw (A3) -- (A9) -- (A10);
 
 % Wellenwiderstand
-\draw (A10) to[european resistor, l=${Z_{e}}$] (A11);
+\draw (A10) to[european resistor, l=${Z_{e}=Z_{w}}$] (A11);
 
 \draw (A11) -- (A12) -- (A8);
 
